# receipt-sense

./: README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/routes/: process.py
backend/app/core/: ocr_processor.py
backend/src/: app.py
backend/src/utils/: ocr_service.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AppSidebar.tsx  InputForm.tsx  app-sidebar.tsx
frontend/src/components/Forms/: InputForm.tsx  LoginForm.tsx
frontend/src/components/dashboard/: Dashboard.tsx  Transactions.tsx
frontend/src/components/ui/: button.tsx
frontend/src/config/: index.ts
frontend/src/pages/dashboard/: Dashboard.tsx  MonthlyExp.tsx
frontend/src/pages/input/: Input.tsx
frontend/src/pages/login/: Login.tsx
frontend/src/pages/upload/: Preview.tsx  Upload.tsx
frontend/src/types/: index.d.ts
