[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Patty Hung <pattyhung72@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^11.0.0"
transformers = "^4.47.1"
uvicorn = "^0.34.0"
fastapi = "^0.115.6"
torch = "^2.5.1"
python-multipart = "^0.0.20"
sqlmodel = "^0.0.22"
pydantic = "^2.10.5"
paddlepaddle = "^2.6.2"
numpy = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
